--- a/blogpost.html
+++ b/blogpost.html
@@ -27,6 +27,7 @@
                     blbalablabalab
                     blabalbalab
                 </p>
+		<p>colocando vainas como pal merge zzzz</p>
                 <p>suscribete y like</p>
             </div>
         </div>
