--- a/blogpost.html
+++ b/blogpost.html
@@ -30,6 +30,9 @@
 		<p>colocando vainas como pal merge zzzz</p>
                 <p>suscribete y like</p>
             </div>
+            <div id="footer">
+                Hecho con blasajsjk &lt;3
+            </div>
         </div>
         
     </body>
